Added Automation Testing

--- a/Testing/ICIN_test/test-output/old/Default suite/classes.html
+++ b/Testing/ICIN_test/test-output/old/Default suite/classes.html
@@ -4,14 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>frontEndTesting.TransferFundTest</td>
+<td>frontEndTesting.WithdrawFundTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>transferFund</td>
+<td>withdrawFundInSavingAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>withdrawFundInPrimaryAccount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
