--- a/Testing/ICIN_test/test-output/old/Default suite/methods-alphabetical.html
+++ b/Testing/ICIN_test/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ec8072">  <td>20/08/16 02:31:15</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TransferFundTest.cleanUp()[pri:0, instance:frontEndTesting.TransferFundTest@7494e528]">&lt;&lt;cleanUp</td> 
+<tr bgcolor="ec8072">  <td>20/08/17 03:35:32</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;WithdrawFundTest.cleanUp()[pri:0, instance:frontEndTesting.WithdrawFundTest@7494e528]">&lt;&lt;cleanUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@815992954</td>   <td></td> </tr>
-<tr bgcolor="ec8072">  <td>20/08/16 02:31:05</td>   <td>-10572</td> <td>&nbsp;</td><td title="&gt;&gt;TransferFundTest.setUp()[pri:0, instance:frontEndTesting.TransferFundTest@7494e528]">&gt;&gt;setUp</td> 
+<tr bgcolor="ec8072">  <td>20/08/17 03:35:20</td>   <td>-11562</td> <td>&nbsp;</td><td title="&gt;&gt;WithdrawFundTest.setUp()[pri:0, instance:frontEndTesting.WithdrawFundTest@7494e528]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@815992954</td>   <td></td> </tr>
-<tr bgcolor="ec8072">  <td>20/08/16 02:31:12</td>   <td>-3684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TransferFundTest.transferFund()[pri:0, instance:frontEndTesting.TransferFundTest@7494e528]">transferFund</td> 
+<tr bgcolor="ec8072">  <td>20/08/17 03:35:26</td>   <td>-5156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WithdrawFundTest.withdrawFundInPrimaryAccount()[pri:0, instance:frontEndTesting.WithdrawFundTest@7494e528]">withdrawFundInPrimaryAccount</td> 
+  <td>main@815992954</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>20/08/17 03:35:28</td>   <td>-3307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WithdrawFundTest.withdrawFundInSavingAccount()[pri:0, instance:frontEndTesting.WithdrawFundTest@7494e528]">withdrawFundInSavingAccount</td> 
+  <td>main@815992954</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>20/08/17 03:35:30</td>   <td>-1645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WithdrawFundTest.withdrawingAmountGreaterThanCurrentAmounForSavingsAccount()[pri:0, instance:frontEndTesting.WithdrawFundTest@7494e528]">withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</td> 
   <td>main@815992954</td>   <td></td> </tr>
 </table>
