Fixed admin panel chequebook request section

--- a/Testing/ICIN_test/test-output/index.html
+++ b/Testing/ICIN_test/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\meets\AppData\Local\Temp\testng-eclipse--1811158390\testng-customsuite.xml</span>
+                    <span>C:\Users\meets\AppData\Local\Temp\testng-eclipse--1099720741\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="frontEndTesting.WithdrawFundTest" hash-for-method="withdrawFundInPrimaryAccount">withdrawFundInPrimaryAccount</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="frontEndTesting.WithdrawFundTest" hash-for-method="withdrawFundInSavingAccount">withdrawFundInSavingAccount</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="frontEndTesting.WithdrawFundTest" hash-for-method="withdrawingAmountGreaterThanCurrentAmounForSavingsAccount">withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="frontEndTesting.RegistrationTest" hash-for-method="registerUser">registerUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">frontEndTesting.WithdrawFundTest</span>
+              <span class="class-name">frontEndTesting.RegistrationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="withdrawFundInPrimaryAccount">
-                  </a> <!-- withdrawFundInPrimaryAccount -->
-                  <span class="method-name">withdrawFundInPrimaryAccount</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withdrawFundInSavingAccount">
-                  </a> <!-- withdrawFundInSavingAccount -->
-                  <span class="method-name">withdrawFundInSavingAccount</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="withdrawingAmountGreaterThanCurrentAmounForSavingsAccount">
-                  </a> <!-- withdrawingAmountGreaterThanCurrentAmounForSavingsAccount -->
-                  <span class="method-name">withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</span>
+                  <a name="registerUser">
+                  </a> <!-- registerUser -->
+                  <span class="method-name">registerUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\meets\AppData\Local\Temp\testng-eclipse--1811158390\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\meets\AppData\Local\Temp\testng-eclipse--1099720741\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;frontEndTesting.WithdrawFundTest&quot;/&gt;
+      &lt;class name=&quot;frontEndTesting.RegistrationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'withdrawFundInPrimaryAccount')
-data.setCell(0, 2, 'frontEndTesting.WithdrawFundTest')
-data.setCell(0, 3, 1815);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'withdrawFundInSavingAccount')
-data.setCell(1, 2, 'frontEndTesting.WithdrawFundTest')
-data.setCell(1, 3, 1657);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'withdrawingAmountGreaterThanCurrentAmounForSavingsAccount')
-data.setCell(2, 2, 'frontEndTesting.WithdrawFundTest')
-data.setCell(2, 3, 1636);
+data.setCell(0, 1, 'registerUser')
+data.setCell(0, 2, 'frontEndTesting.RegistrationTest')
+data.setCell(0, 3, 4802);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,26 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">frontEndTesting.WithdrawFundTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">frontEndTesting.RegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">withdrawFundInPrimaryAccount</span>
-                <span class="method-start">6412 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withdrawFundInSavingAccount</span>
-                <span class="method-start">8261 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</span>
-                <span class="method-start">9923 ms</span>
+                <span class="method-name">registerUser</span>
+                <span class="method-start">6554 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">cleanUp</span>
-                <span class="method-start">11567 ms</span>
+                <span class="method-start">11364 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
