--- a/Testing/ICIN_test/test-output/emailable-report.html
+++ b/Testing/ICIN_test/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,575</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,369</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">frontEndTesting.WithdrawFundTest</td><td><a href="#m0">withdrawFundInPrimaryAccount</a></td><td rowspan="1">1597615526960</td><td rowspan="1">1815</td></tr><tr class="passedeven"><td><a href="#m1">withdrawFundInSavingAccount</a></td><td rowspan="1">1597615528809</td><td rowspan="1">1657</td></tr><tr class="passedeven"><td><a href="#m2">withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</a></td><td rowspan="1">1597615530471</td><td rowspan="1">1636</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">frontEndTesting.RegistrationTest</td><td><a href="#m0">registerUser</a></td><td rowspan="1">1597647652550</td><td rowspan="1">4802</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">frontEndTesting.WithdrawFundTest#withdrawFundInPrimaryAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">frontEndTesting.WithdrawFundTest#withdrawFundInSavingAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">frontEndTesting.WithdrawFundTest#withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">frontEndTesting.RegistrationTest#registerUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
