--- a/Testing/ICIN_test/test-output/old/Default suite/classes.html
+++ b/Testing/ICIN_test/test-output/old/Default suite/classes.html
@@ -4,22 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>frontEndTesting.WithdrawFundTest</td>
+<td>frontEndTesting.RegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>withdrawFundInSavingAccount</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>withdrawingAmountGreaterThanCurrentAmounForSavingsAccount</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>withdrawFundInPrimaryAccount</td>
+<td>registerUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
