Fixed negative balance issue

--- a/Testing/ICIN_test/test-output/old/Default suite/classes.html
+++ b/Testing/ICIN_test/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>frontEndTesting.RequestChequeBookTest</td>
+<td>frontEndTesting.RegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>requestChequeBook</td>
+<td>registerUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>registerUser2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
