--- a/Testing/ICIN_test/test-output/old/Default suite/methods-alphabetical.html
+++ b/Testing/ICIN_test/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ec8072">  <td>20/08/17 22:09:27</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RequestChequeBookTest.cleanUp()[pri:0, instance:frontEndTesting.RequestChequeBookTest@7494e528]">&lt;&lt;cleanUp</td> 
+<tr bgcolor="ec8072">  <td>20/08/20 13:35:48</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;RegistrationTest.cleanUp()[pri:0, instance:frontEndTesting.RegistrationTest@7494e528]">&lt;&lt;cleanUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@815992954</td>   <td></td> </tr>
-<tr bgcolor="ec8072">  <td>20/08/17 22:09:25</td>   <td>-2027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RequestChequeBookTest.requestChequeBook()[pri:0, instance:frontEndTesting.RequestChequeBookTest@7494e528]">requestChequeBook</td> 
+<tr bgcolor="ec8072">  <td>20/08/20 13:35:39</td>   <td>-9442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registerUser()[pri:0, instance:frontEndTesting.RegistrationTest@7494e528]">registerUser</td> 
   <td>main@815992954</td>   <td></td> </tr>
-<tr bgcolor="ec8072">  <td>20/08/17 22:09:11</td>   <td>-15633</td> <td>&nbsp;</td><td title="&gt;&gt;RequestChequeBookTest.setUp()[pri:0, instance:frontEndTesting.RequestChequeBookTest@7494e528]">&gt;&gt;setUp</td> 
+<tr bgcolor="ec8072">  <td>20/08/20 13:35:44</td>   <td>-4843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegistrationTest.registerUser2()[pri:0, instance:frontEndTesting.RegistrationTest@7494e528]">registerUser2</td> 
+  <td>main@815992954</td>   <td></td> </tr>
+<tr bgcolor="ec8072">  <td>20/08/20 13:35:30</td>   <td>-18207</td> <td>&nbsp;</td><td title="&gt;&gt;RegistrationTest.setUp()[pri:0, instance:frontEndTesting.RegistrationTest@7494e528]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@815992954</td>   <td></td> </tr>
 </table>
